--- a/css/style.scss
+++ b/css/style.scss
@@ -30,26 +30,14 @@ body::-webkit-scrollbar{/*Google Chrome、Safariへの対応*/
   display: none;
 }
 
-/*========= waveを描画するエリア設定 ===============*/
-
-canvas {
-  position: fixed;
-  z-index: -999;
-  top: 0;
-  left:0;
-  width: 100%;
-  transform: rotate(180deg);
-}
 
 /***************************************************
 card-animation
 **************************************************/
-.animation{
+.animation {
   animation-timing-function: ease-in-out;
-  animation-iteration-count: infinite;
   animation-direction: alternate;
   animation-duration: 1.5s;
-  width: 128px;
 }
 .card {
   animation-name: poyopoyo;
@@ -63,7 +51,7 @@ card-animation
   }
 }
 /***************************************************
-流れるテキスト
+流れるテキスト1
 **************************************************/
 /*全共通*/
 .slide-in {
@@ -74,7 +62,7 @@ card-animation
   display: inline-block;
 }
 /*左右のアニメーション*/
-.leftAnime{
+.leftAnime {
     opacity: 0;/*事前に透過0にして消しておく*/
 }
 .slideAnimeLeftRight {
@@ -113,21 +101,49 @@ card-animation
 }
 
 /***************************************************
-テキストを滑らかに出現させるためのCSS
+流れるテキスト2
 **************************************************/
-span.smoothText {
-  overflow: hidden;
-  display: block;
+/*全共通*/
+
+/* 上下のアニメーション*/
+.downAnime {
+  opacity: 0;/* 事前に透過0 にして消しておく*/
 }
-/* アニメーションで傾斜がついている文字列を水平に戻す*/
-span.smoothTextTrigger {
-  transition: .8s ease-in-out;
-  transform: translate3d(0,100%,0) skewY(12deg);
-  transform-origin: left;
-  display: block;
+
+.slideAnimeDownUp {
+  animation-name:slideTextY100;
+  animation-duration:0.8s;
+  animation-fill-mode:forwards;
+  opacity: 0;
 }
-span.smoothTextTrigger.smoothTextAppear {
-    transform: translate3d(0,0,0) skewY(0);
+
+@keyframes slideTextY100 {
+  from {
+      transform: translateY(100%);/* 要素を上の枠外に移動*/
+      opacity: 0;
+  }
+  to {
+      transform: translateY(0);/* 要素を元の位置に移動*/
+      opacity: 1;
+  }
+}
+
+.slideAnimeUpDown {
+  animation-name:slideTextY-100;
+  animation-duration:0.8s;
+  animation-fill-mode:forwards;
+  opacity: 0;
+}
+
+@keyframes slideTextY-100 {
+  from {
+      transform: translateY(-100%);/* 要素を下の枠外に移動*/
+      opacity: 0;
+  }
+  to {
+      transform: translateY(0);/* 要素を元の位置に移動*/
+      opacity: 1;
+  }
 }
 
 
@@ -668,15 +684,18 @@ body {
       .flex-wrapper {
         padding-bottom: 64px;
         .inner-flex-box {
-          .inner-icon {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            column-gap: 8px;
-            padding-bottom: 40px;
-            img {
-              width: 30px;
-              margin: 0;
+          .text-box {
+            text-align: center;
+            .inner-icon {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              column-gap: 8px;
+              padding-bottom: 40px;
+              img {
+                width: 30px;
+                margin: 0;
+              }
             }
           }
         }
@@ -767,6 +786,13 @@ body {
       background-image: url(../img/Order.svg);
       background-size: 300px auto;
       background-position: left 0;
+      .order-text {
+        font-size: rem(14);
+        font-weight: 400;
+        line-height: 1.5;
+        letter-spacing: 4px;
+        padding-bottom: 40px;
+      }
     }
     .flex-wrapper {
       form {
@@ -807,8 +833,7 @@ body {
         .inner-flex-box:nth-child(4),
         .inner-flex-box:nth-child(5),
         .inner-flex-box:nth-child(6),
-        .inner-flex-box:nth-child(7),
-        .inner-flex-box:nth-child(8) {
+        .inner-flex-box:nth-child(7) {
           display: block;
           dt {
             padding-bottom: 16px;
@@ -820,16 +845,16 @@ body {
             }
           }
         }
-        .inner-flex-box:nth-child(5),
-        .inner-flex-box:nth-child(7) {
+        .inner-flex-box:nth-child(4),
+        .inner-flex-box:nth-child(6) {
           dd {
-            width: 100%;
+            width: 100vw;
             input {
               width: 100px;
             }
           }
         }
-        .inner-flex-box:nth-child(9) {
+        .inner-flex-box:nth-child(8) {
           dd {
             display: flex;
             align-items: center;
@@ -902,6 +927,7 @@ body {
               /*アコーディオンで現れるエリア*/
             .inner-box2 {
               display: flex;
+              align-items: flex-start;
               column-gap: 16px;
               padding: 24px 0;
               img {
@@ -916,6 +942,9 @@ body {
             }
             }
           }
+          li:last-child {
+            margin-bottom: 0;
+          }
         }
       }
       .txt-hide {
@@ -924,7 +953,7 @@ body {
             margin: 40px 0; 
             .flex-wrapper {
               margin:0 auto;
-              width: 100;
+              width: 100%;
               max-width: 900px;
               border-bottom: 2px dotted var(--color-inner-text);
               padding-bottom: 24px;
@@ -952,7 +981,7 @@ body {
                 /*アコーディオンで現れるエリア*/
               .inner-box2 {
                 display: flex;
-                align-items: center;
+                align-items: flex-start;
                 column-gap: 16px;
                 padding: 24px 0;
                 img {
@@ -1685,6 +1714,13 @@ body {
       background-image: url(../img/Order.svg);
       background-size: 50% 40%;
       background-position: 30% -15%;
+      .order-text {
+        text-align: center;
+        font-size: rem(18);
+        line-height: 2;
+        letter-spacing: 4px;
+        padding-bottom: 64px;
+      }
     }
     .flex-wrapper {
       margin: 0 128px;
@@ -1695,13 +1731,14 @@ body {
           table-layout: fixed;
           padding-bottom: 40px;
           width: 100%;
+          white-space: nowrap;
           dt {
             font-size: rem(18);
-            width: 20%;
+            width: 40%;
             padding-right: 40px;
           }
           dd {
-            width: 80%;
+            width: 60%;
             input,select {
               border: .5px solid #AAAAAA;
               border-radius: 5px;
@@ -1731,14 +1768,14 @@ body {
             }
           }
         }
-        .inner-flex-box:nth-child(3) {
+        .inner-flex-box:nth-child(2) {
           dd {
             input {
               width: 100%;
             }
           }
         }
-        .inner-flex-box:nth-child(4) {
+        .inner-flex-box:nth-child(3) {
           dd {
             display: initial;
             input {
@@ -1750,28 +1787,28 @@ body {
             }
           }
         }
-        .inner-flex-box:nth-child(5) {
+        .inner-flex-box:nth-child(4) {
           dd {
             input {
               width: 100px;
             }
           }
         }
-        .inner-flex-box:nth-child(6) {
+        .inner-flex-box:nth-child(5) {
           dd {
             input {
               width: 100%;
             }
           }
         }
-        .inner-flex-box:nth-child(7) {
+        .inner-flex-box:nth-child(6) {
           dd {
             input {
               width: 100px;
             }
           }
         }
-        .inner-flex-box:nth-child(8) {
+        .inner-flex-box:nth-child(7) {
           dd {
             input {
               width: 100%;
@@ -1783,11 +1820,10 @@ body {
         .inner-flex-box:nth-child(4),
         .inner-flex-box:nth-child(5),
         .inner-flex-box:nth-child(6),
-        .inner-flex-box:nth-child(7),
-        .inner-flex-box:nth-child(8) {
+        .inner-flex-box:nth-child(7) {
           display: table;
         }
-        .inner-flex-box:nth-child(9) {
+        .inner-flex-box:nth-child(8) {
           dd {
             display: flex;
             align-items: center;
@@ -1858,6 +1894,7 @@ body {
                 /*アコーディオンで現れるエリア*/
               .inner-box2 {
                 display: flex;/*はじめは非表示*/
+                align-items: flex-start;
                 padding: 0;
                 column-gap: 8px;
               }
@@ -1875,7 +1912,7 @@ body {
               .flex-wrapper {
                 width: 80%;
                 max-width: 1000px;
-                margin:0 auto;
+                margin:0 auto 40px auto;
                 .inner-box1 {
                   display: flex;
                   justify-content: flex-start;
@@ -1910,7 +1947,6 @@ body {
                 .inner-box2 {
                   display: flex;/*はじめは非表示*/
                   padding: 40px 16px;
-                  align-items: center;
                   column-gap: 8px;
                   }
                 }
@@ -1923,7 +1959,7 @@ body {
         // さらに表示*************
           button.more {
           width: 320px;
-          padding: 0;
+          padding-top: 64px;
         }
         button.more::after {
           content: "さらに表示";
