--- a/css/style.scss
+++ b/css/style.scss
@@ -24,10 +24,10 @@ body {
   font-size: rem(16);
   color: var(--color-inner-text);
   -ms-overflow-style: none;/*IE(Internet Explorer)・Microsoft Edgeへの対応*/
-  scrollbar-width: none;/*Firefoxへの対応*/
+  // scrollbar-width: none;/*Firefoxへの対応*/
 }
 body::-webkit-scrollbar{/*Google Chrome、Safariへの対応*/
-  display: none;
+  display: inline-block;
 }
 
 
@@ -114,6 +114,7 @@ card-animation
   animation-name:slideTextY100;
   animation-duration:0.8s;
   animation-fill-mode:forwards;
+  animation-delay: .5s;
   opacity: 0;
 }
 
@@ -220,56 +221,93 @@ $color3: #025DC7;
 /***************************************************
 main-ttl
 **************************************************/
+
 @-webkit-keyframes animate-svg-stroke-1 {
   0% {
-    stroke-dashoffset: 2768.0087890625px;
-    stroke-dasharray: 2768.0087890625px;
+    stroke-dashoffset: 6092.90234375px;
+    stroke-dasharray: 6092.90234375px;
   }
 
   100% {
-    stroke-dashoffset: 5536.017578125px;
-    stroke-dasharray: 2768.0087890625px;
+    stroke-dashoffset: 0;
+    stroke-dasharray: 6092.90234375px;
   }
 }
 
 @keyframes animate-svg-stroke-1 {
   0% {
-    stroke-dashoffset: 2768.0087890625px;
-    stroke-dasharray: 2768.0087890625px;
+    stroke-dashoffset: 6092.90234375px;
+    stroke-dasharray: 6092.90234375px;
   }
 
   100% {
-    stroke-dashoffset: 5536.017578125px;
-    stroke-dasharray: 2768.0087890625px;
-  }
-}
-
-@-webkit-keyframes animate-svg-fill-1 {
-  0% {
-    fill: transparent;
-  }
-
-  100% {
-    fill: rgb(33, 66, 105);
-  }
-}
-
-@keyframes animate-svg-fill-1 {
-  0% {
-    fill: transparent;
-  }
-
-  100% {
-    fill: rgb(33, 66, 105);
+    stroke-dashoffset: 0;
+    stroke-dasharray: 6092.90234375px;
   }
 }
 
 .svg-elem-1 {
-  -webkit-animation: animate-svg-stroke-1 2s ease-in-out 0s both,
-                      animate-svg-fill-1 2s ease-in-out 1.5s both;
-          animation: animate-svg-stroke-1 2s ease-in-out 0s both,
-              animate-svg-fill-1 2s ease-in-out 1.5s both;
+-webkit-animation: animate-svg-stroke-1 2s ease-in-out 0s both,
+                      animate-svg-fill-1 0.8s ease-in-out 0.5s both;
+        animation: animate-svg-stroke-1 2s ease-in-out 0s both,
+              animate-svg-fill-1 0.8s ease-in-out 0.5s both;
 }
+
+@-webkit-keyframes animate-svg-stroke-2 {
+  0% {
+    stroke-dashoffset: 6092.90234375px;
+    stroke-dasharray: 6092.90234375px;
+  }
+
+  100% {
+    stroke-dashoffset: 0;
+    stroke-dasharray: 6092.90234375px;
+  }
+}
+
+@keyframes animate-svg-stroke-2 {
+  0% {
+    stroke-dashoffset: 6092.90234375px;
+    stroke-dasharray: 6092.90234375px;
+  }
+
+  100% {
+    stroke-dashoffset: 0;
+    stroke-dasharray: 6092.90234375px;
+  }
+}
+
+@-webkit-keyframes animate-svg-fill-2 {
+  0% {
+    fill: transparent;
+  }
+
+  100% {
+    fill: rgb(33, 66, 105);
+  }
+}
+
+@keyframes animate-svg-fill-2 {
+  0% {
+    fill: transparent;
+  }
+
+  100% {
+    fill: rgb(33, 66, 105);
+  }
+}
+
+.svg-elem-2 {
+  -webkit-animation: animate-svg-stroke-2 2s ease-in-out 0.5s both,
+                      animate-svg-fill-2 0.8s ease-in-out 0.6s both;
+          animation: animate-svg-stroke-2 2s ease-in-out 0.5s both,
+              animate-svg-fill-2 0.8s ease-in-out 0.6s both;
+}
+
+
+
+
+
 
 
 .container {
@@ -684,8 +722,6 @@ body {
       .flex-wrapper {
         padding-bottom: 64px;
         .inner-flex-box {
-          .text-box {
-            text-align: center;
             .inner-icon {
               display: flex;
               align-items: center;
@@ -693,11 +729,10 @@ body {
               column-gap: 8px;
               padding-bottom: 40px;
               img {
-                width: 30px;
+                width: 50px;
                 margin: 0;
               }
             }
-          }
         }
         img:nth-child(2) {
           width: 70%;
@@ -739,7 +774,7 @@ body {
             column-gap: 8px;
             padding-bottom: 40px;
             img {
-              width: 30px;
+              width: 50px;
               margin: 0;
               padding: 0;
             }
@@ -1098,50 +1133,6 @@ body {
 main-svg
  **************************************************/
 
-@-webkit-keyframes animate-svg-stroke-1 {
-  0% {
-    stroke-dashoffset: 6537.24072265625px;
-    stroke-dasharray: 6537.24072265625px;
-  }
-  100% {
-    stroke-dashoffset: 13074.4814453125px;
-    stroke-dasharray: 6537.24072265625px;
-  }
-}
-@keyframes animate-svg-stroke-1 {
-  0% {
-    stroke-dashoffset: 6537.24072265625px;
-    stroke-dasharray: 6537.24072265625px;
-  }
-  100% {
-    stroke-dashoffset: 13074.4814453125px;
-    stroke-dasharray: 6537.24072265625px;
-  }
-}
-@-webkit-keyframes animate-svg-fill-1 {
-  0% {
-    fill: transparent;
-  }
-  100% {
-    fill: rgb(33, 66, 105);
-  }
-}
-@keyframes animate-svg-fill-1 {
-  0% {
-    fill: transparent;
-  }
-  100% {
-    fill: rgb(33, 66, 105);
-  }
-}
-.svg-elem-1 {
-  -webkit-animation: animate-svg-stroke-1 2s ease-in-out 0s both,
-                      animate-svg-fill-1 2s ease-in-out 2s both;
-        animation: animate-svg-stroke-1 2s ease-in-out 0s both,
-              animate-svg-fill-1 2s ease-in-out 2s both;
-}
-
-
 
 
 .shape1 {
@@ -1280,9 +1271,10 @@ body {
       .flex-wrapper {
         display: flex;
         justify-content: space-between;
+        align-items: center;
         padding-top: 0;
         img {
-          width: 200px;
+          width: 100px;
         }
         ul {
           display: flex;
@@ -1308,12 +1300,13 @@ body {
             border: 2px solid var(--color-accentA);
             box-shadow: 0px 2px 4px 0px rgba(15, 12, 12, 0.25);
             background: #FFF;
-            padding: 12px 24px;
+            padding: 18px 24px;
             margin-left: 0;
             margin-top: 0;
             form {
               display: flex;
-              column-gap: 20px;
+              column-gap: 26px;
+              align-items: baseline;
               input {
                 font-size: rem(18);
                 font-weight: 600;
@@ -1617,7 +1610,7 @@ body {
             column-gap: 24px;
             padding-bottom: 40px;
             img {
-              width: 30px;
+              width: 50px;
               margin: 0;
             }
           }
@@ -1630,7 +1623,7 @@ body {
             padding-bottom: 0;
             line-height: 2;
             text-align: left;
-            margin-left: 54px;
+            margin-left: 74px;
           }
           .inner-text {
             color: var(--color-inner-text);
@@ -1662,7 +1655,7 @@ body {
             column-gap: 24px;
             padding-bottom: 40px;
             img {
-              width: 30px;
+              width: 50px;
               margin: 0;
               padding: 0;
             }
